--- a/style/main.css
+++ b/style/main.css
@@ -312,71 +312,130 @@ hr {
     font-weight: bold;
     z-index: 10;
     font-size: 55px; }
+  .tile.tile-1 .tile-inner {
+    color: #ffffff;
+    background: #94dfee;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    color: #ffffff;
+    background: #eb657d;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-4 .tile-inner {
-    background: #ede0c8;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-8 .tile-inner {
+  .tile.tile-3 .tile-inner {
+    color: #000000;
+    background: #f9f6f2;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+  .tile.tile-6 .tile-inner {
+    color: #000000;
+    background: #d6d9db;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+  .tile.tile-12 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
-  .tile.tile-16 .tile-inner {
+    background: #a9c9db; }
+  .tile.tile-24 .tile-inner {
     color: #f9f6f2;
-    background: #f59563; }
-  .tile.tile-32 .tile-inner {
+    background: #76cada; }
+  .tile.tile-48 .tile-inner {
     color: #f9f6f2;
-    background: #f67c5f; }
-  .tile.tile-64 .tile-inner {
+    background: #98b0de; }
+  .tile.tile-96 .tile-inner {
     color: #f9f6f2;
-    background: #f65e3b; }
-  .tile.tile-128 .tile-inner {
+    background: #5999df; }
+  .tile.tile-192 .tile-inner {
     color: #f9f6f2;
-    background: #edcf72;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    background: #5fa6e0;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-128 .tile-inner {
+      .tile.tile-192 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-256 .tile-inner {
+  .tile.tile-384 .tile-inner {
     color: #f9f6f2;
-    background: #edcc61;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    background: #479ce1;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
+      .tile.tile-384 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-512 .tile-inner {
+  .tile.tile-768 .tile-inner {
     color: #f9f6f2;
-    background: #edc850;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    background: #2f92e2;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-512 .tile-inner {
+      .tile.tile-768 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-1024 .tile-inner {
+  .tile.tile-1536 .tile-inner {
     color: #f9f6f2;
-    background: #edc53f;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    background: #1788e3;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-1024 .tile-inner {
+      .tile.tile-1536 .tile-inner {
         font-size: 15px; } }
-  .tile.tile-2048 .tile-inner {
+  .tile.tile-3072 .tile-inner {
     color: #f9f6f2;
-    background: #edc22e;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    background: #007ee5;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-2048 .tile-inner {
+      .tile.tile-3072 .tile-inner {
         font-size: 15px; } }
-  .tile.tile-super .tile-inner {
+  .tile.tile-6144 .tile-inner {
     color: #f9f6f2;
-    background: #3c3a32;
+    background: #7eeee5;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.65536), inset 0 0 0 1px rgba(255, 255, 255, 0.38765);
+    font-size: 35px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-6144 .tile-inner {
+        font-size: 15px; } }
+  .tile.tile-12288 .tile-inner {
+    color: #f9f6f2;
+    background: #5eeee7;
+    box-shadow: 0 0 30px 10px rgba(51, 163, 255, 0.75336), inset 0 0 0 1px rgba(255, 255, 255, 0.42356);
     font-size: 30px; }
     @media screen and (max-width: 520px) {
-      .tile.tile-super .tile-inner {
+      .tile.tile-12288 .tile-inner {
         font-size: 10px; } }
+  .tile.tile-24576 .tile-inner {
+    color: #f9f6f2;
+    background: #5dcee7;
+    box-shadow: 0 0 30px 10px rgba(135, 182, 255, 0.83336), inset 0 0 0 1px rgba(255, 255, 255, 0.38765);
+    font-size: 30px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-24576 .tile-inner {
+        font-size: 10px; } }
+  .tile.tile-49152 .tile-inner {
+    color: #f9f6f2;
+    background: #5dc22e;
+    box-shadow: 0 0 30px 10px rgba(222, 201, 185, 0.85556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 30px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-49152 .tile-inner {
+        font-size: 10px; } }
+  .tile.tile-98304 .tile-inner {
+    color: #f9f6f2;
+    background: #edc22e;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 115, 0.95556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 30px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-98304 .tile-inner {
+        font-size: 10px; } }
+  .tile.tile-196608 .tile-inner {
+    color: #f9f6f2;
+    background: #f5a525;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 115, 0.99999), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 25px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-196608 .tile-inner {
+        font-size: 8px; } }
+  .tile.tile-super .tile-inner {
+    color: #ffffff;
+    background: #000000;
+    box-shadow: 0 0 30px 10px #f3d774, inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 25px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-super .tile-inner {
+        font-size: 8px; } }
 
 @-webkit-keyframes appear {
   0% {
